add edit system

--- a/content/test.html
+++ b/content/test.html
@@ -1,7 +1,7 @@
 <input class="test" id="test" type="text" value="2020年02月">
 
 <script>
-  c = document.getElementsByClassName('test').value
+  c = document.getElementsByClassName('test')
   console.log(c)
   i =document.getElementById('test').value
   console.log(i)
